<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TiketFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:indeterminateTint="@color/darkBlue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="28dp"
        android:text="@string/sale_tiket"
        android:layout_marginHorizontal="80dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/gray7"
        android:fontFamily="@font/sf_pro_display_regular_400"
        />

    <LinearLayout
        android:id="@+id/linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_name_fragment"
        android:background="@drawable/shape_linear"
        android:layout_marginTop="36dp"
        android:visibility="gone"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/gray4"
            app:cardCornerRadius="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="90dp">


                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/ic_search_main_screen"
                    android:layout_marginStart="12dp"/>

              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/et_location_city"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintStart_toEndOf="@id/img_search"
                  app:layout_constraintTop_toTopOf="parent"
                  android:hint="@string/minsk"
                  android:textColorHint="@color/white"
                  android:layout_marginStart="46dp"
                  android:layout_marginEnd="16dp"
                  android:background="@color/gray4"
                  android:layout_marginTop="16dp"
                  android:fontFamily="@font/sf_pro_display_regular_400"/>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:layout_constraintTop_toBottomOf="@id/et_location_city"
                    app:layout_constraintStart_toStartOf="@id/et_location_city"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@color/gray5"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="46dp"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:id="@+id/tv_where"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/where"
                    android:layout_marginEnd="16dp"
                    android:background="@color/gray4"
                    android:layout_marginStart="46dp"
                    app:layout_constraintTop_toBottomOf="@id/view"
                    app:layout_constraintStart_toStartOf="@id/et_location_city"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/gray6"
                    android:textSize="16sp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_container"
        android:layout_marginTop="32dp"
        android:text="@string/music"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/gray7"
        android:fontFamily="@font/sf_pro_display_regular_400"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_music"
        android:layout_marginTop="26dp"
        tools:listitem="@layout/item_tiket_music"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv"
        android:backgroundTint="@color/gray3"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/view_all"
        app:cornerRadius="8dp"
        android:visibility="gone"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_regular_400"
        android:padding="14dp"

        />



</androidx.constraintlayout.widget.ConstraintLayout>