<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_corner"
    >


    <View
        android:id="@+id/view"
        android:layout_width="38dp"
        android:layout_height="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/gray5"
        android:layout_marginTop="16dp"
        app:layout_constraintCircleRadius="6dp"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:cardBackgroundColor="@color/gray3"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <ImageView
                android:id="@+id/img_plane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_tiket"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18dp"/>

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_search_main_screen_white"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/img_search"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/minsk"
                android:layout_marginStart="46dp"
                android:layout_marginEnd="24dp"
                android:background="@color/gray3"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"

                android:fontFamily="@font/sf_pro_display_regular_400"/>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@id/et_location_city"
                app:layout_constraintStart_toStartOf="@id/et_location_city"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/gray4"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_where"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/where"
                android:layout_marginEnd="24dp"
                android:background="@color/gray3"
                android:layout_marginStart="46dp"
                app:layout_constraintTop_toBottomOf="@id/view1"
                app:layout_constraintStart_toStartOf="@id/et_location_city"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray6"
                android:textSize="16sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/et_where"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_exit"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="6dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lineaer_cont_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/card_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_strong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_strong"
            android:layout_marginStart="27dp"
            android:layout_marginTop="24dp"/>

        <ImageView
            android:id="@+id/img_where"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_where"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"/>

        <ImageView
            android:id="@+id/img_weekend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_weekend"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"/>

        <ImageView
            android:id="@+id/img_hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hot"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineaer_cont_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lineaer_cont_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_strong"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/strong"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_display_regular_400"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/where1"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_display_regular_400"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="@string/weekend"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_display_regular_400"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/got"
            android:layout_marginStart="38dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_display_regular_400"
            android:layout_marginTop="8dp"/>



    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@id/lineaer_cont_2"
        android:background="@drawable/const_shape"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/img_stambul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/img_stambul"/>

            <TextView
                android:id="@+id/tv_stambul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/img_stambul"
                app:layout_constraintStart_toEndOf="@id/img_stambul"
                android:text="@string/stambul"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_pro_display_regular_400"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_stambul"
                app:layout_constraintStart_toStartOf="@id/tv_stambul"
                android:text="@string/popular"
                android:textSize="14sp"
                android:textColor="@color/gray5"
                android:fontFamily="@font/sf_pro_display_regular_400"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/view_stambul"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray5"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/const1"
            android:layout_marginTop="8dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view_stambul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            >

            <ImageView
                android:id="@+id/img_sochi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/img_sochi"/>

            <TextView
                android:id="@+id/tv_sochi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/img_sochi"
                app:layout_constraintStart_toEndOf="@id/img_sochi"
                android:text="@string/sochi"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_pro_display_regular_400"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_sochi"
                app:layout_constraintStart_toStartOf="@id/tv_sochi"
                android:text="@string/popular"
                android:textSize="14sp"
                android:textColor="@color/gray5"
                android:fontFamily="@font/sf_pro_display_regular_400"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_sochi"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray5"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/const2"
            android:layout_marginTop="8dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view_sochi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            >


            <ImageView
                android:id="@+id/img_phucket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/img_phucket"/>

            <TextView
                android:id="@+id/tv_phucket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/img_phucket"
                app:layout_constraintStart_toEndOf="@id/img_phucket"
                android:text="@string/phuchet"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_pro_display_regular_400"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_phucket"
                app:layout_constraintStart_toStartOf="@id/tv_phucket"
                android:text="@string/popular"
                android:textSize="14sp"
                android:textColor="@color/gray5"
                android:fontFamily="@font/sf_pro_display_regular_400"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_phucket"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray5"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/const3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:layout_constraintTop_toBottomOf="@id/const_container"
        app:layout_constraintBottom_toBottomOf="parent">



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>